@@ -9,6 +9,10 @@
 Emulation:
 
 Emulator:
+- Debugger DSP and CPU code profiling functionality.  Provides statistics
+  about profiled code (executed code address ranges, max and total counts
+  and cycles), lists addresses/instructions taking most cyles and if symbols
+  are loaded, what were the most used symbol addresses.
 
 Other changes:
 - hmsa tool can create empty disk images in addition to converting
